# boveda

./: .gitignore  .gitmessage  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_SIGNING_POLICY.md  CONTRIBUTING.md  Cargo.toml  PRIVACY.md  README.es.md  README.md  ROADMAP.md  SECURITY.es.md  SECURITY.md  TERMS.md  audit.toml  audit_report.txt  audit_report_fixed.txt  boveda-archive-keyring.gpg  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tsconfig.json  vite.config.js  vite.config.ts  vitest-setup.ts  vitest.shims.d.ts
.cargo/: audit.toml
.github/workflows/: apt-boveda.yml  ci.yml  release.yml
.storybook/: preview.ts
crates/boveda-core/: Cargo.toml
crates/boveda-core/docs/: ROADMAP.md  SECURITY_WHITE_PAPER.md
crates/boveda-core/src/: audit.rs  commands.rs  crypto.rs  db.rs  engine.rs  error.rs  lib.rs  models.rs  secret.rs  security.rs  tests.rs
crates/boveda-core/src/auth/: mod.rs  totp.rs
crates/boveda-core/src/commands/: shell.rs
crates/boveda-core/src/commands/account/: mod.rs
crates/boveda-core/src/commands/audit_log/: mod.rs
crates/boveda-core/src/commands/document/: mod.rs
crates/boveda-core/src/commands/export_import/: mod.rs
crates/boveda-core/src/commands/group/: mod.rs
crates/boveda-core/src/commands/pin/: mod.rs
crates/boveda-core/src/commands/preferences/: mod.rs
crates/boveda-core/src/commands/totp/: mod.rs
crates/boveda-core/src/commands/utilities/: mod.rs
crates/boveda-core/src/crypto/: mod.rs  secret.rs
crates/boveda-core/src/storage/: mod.rs  models.rs
crates/boveda-core/src/vault/: export.rs  mod.rs  validation.rs
crates/boveda-core/src/vault/account/: mod.rs
crates/boveda-core/src/vault/authentication/: mod.rs
crates/boveda-core/src/vault/document/: mod.rs
crates/boveda-core/src/vault/export_import/: mod.rs
crates/boveda-core/src/vault/group/: mod.rs
crates/boveda-core/src/vault/pin/: mod.rs
crates/boveda-core/src/vault/totp/: mod.rs  totp.rs
dists/stable/: InRelease  Release  Release.gpg
docs/: auditoria-boveda-core.md
docs/modal/: modal_architecture.md
src/: ambient.d.ts  app.html  layout.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/deb/: postinst  postrm
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  db.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: mod.rs  security.rs  settings.rs  shell.rs  vault.rs
src/lib/: autoLock.ts  stores.ts  tauri.ts  theme.ts
src/lib/actions/: portal.ts
src/lib/components/: AboutView.svelte  AccountsView.svelte  AddCredentialModal.svelte  ConfirmModal.svelte  Dashboard.svelte  DocumentsView.svelte  GeneralView.svelte  PinView.svelte  PreferencesModal.svelte  Sidebar.svelte  TokensView.svelte  UnlockScreen.svelte
src/lib/composables/: useAccounts.svelte.ts  useAccounts.test.ts  useDocuments.svelte.ts  useGroups.svelte.ts  usePins.svelte.ts
src/lib/config/: design-tokens.ts  ui.ts
src/lib/i18n/: index.ts
src/lib/stores/: data.svelte.ts  log.svelte.ts  modal.svelte.ts  performance.svelte.ts  session.svelte.ts  stores.svelte.ts  theme.svelte.ts  (+2 more)
src/routes/: +layout.svelte  +page.svelte
(+130 files in other folders)
