[package]
name = "boveda"
version = "0.1.0"
description = "Bóveda — Elegant Password Manager"
authors = ["you"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "boveda_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "macros", "migrate"] }

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"

# Utilities
uuid = { version = "1", features = ["v4"] }
zeroize = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs-next = "2"
tauri-plugin-dialog = "2.7.0"
