[package]
name = "boveda-core"
version = "1.1.2"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }

# Cryptography
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"

# Utilities
uuid = { version = "1", features = ["v4"] }
zeroize = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
# Memory Protection
region = "3"
libc = "0.2"
thiserror = "2.0.18"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = ["Win32_System_Memory", "Win32_Foundation"]

[dev-dependencies]
tokio = { version = "1.52.2", features = ["full"] }

[dependencies.libsqlite3-sys]
version = "0.27"
features = ["bundled-sqlcipher-vendored-openssl"]
